--- a/index.html
+++ b/index.html
@@ -46,22 +46,17 @@
                         <img src="./Images/mas.png" alt="Más opciones">
                     </a>
                 </span>
-            </div>
-        </header>
+        </header>        
             <div class="user-info">
-                <div class="one">
-                    <span>
-                        <a href="#">
-                            <img src="./Images/profile.png" alt="Imagen de usuario">
-                        </a>
-                    </span>
-                </div>
-                <div class="two">
-                    <span>
+                <div class="myDIV"><a href="#"><img src="./Images/profile.png" alt="Imagen de usuario"></a></div>
+                 <div class="hide">Edit profile photo</div>
+                        
+
+            </div>
+            <div class="user-bio">
+                    
                             <p><h1>Celeste Vargas</h1></p>
                             <p><h6>My profile</h6></p>
-                    </span>
-                </div>
             </div>
         <main class="container">
             <div class="item element-three">
@@ -542,9 +537,18 @@
             </div>
         </main>
 </body>
-<footer class="footer">
-    <div class="p1">Designed by cvarluc ©</div>
-    <div class="p2">May 2022</div>
+<br>
+<footer>
+    <div class="b-example-divider"></div>
 
+    <DIV class="footer"><img src="./Images/hletters.png"></DIV>
+    <ul class="footerLogos" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">FEATURES</a></li>       
+        <li><a href="#">FAQs</a></li>
+        <li><a href="#">ABOUT</a></li>
+    </ul>
+            <p class="footer">&copy; 2022 CVarluc, Inc</p>
 </footer>
+        </div>
 </html>
